fix: Remove dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,11 +7,6 @@
   --foreground: #111111;
 }
 
-.dark {
-  --background: #111111;
-  --foreground: #ffffff;
-}
-
 @layer components {
   .input-style {
     @apply w-full px-3 py-2 bg-gray-700 rounded text-white;
